    - cleanpg: Remove 8.4 clusters.
    - pg_createcluster: Clone configure_8_3() as configure_8_4().
    - t/060_obsolete_confparams.t: Add complete set of 8.3 configuration
      options, to test configuration migration to 8.4.
    - PgCommon.pm, get_cluster_locales(): Bail out if calling on 8.4 or later
      cluster (where locales are not associated to clusters any more).
    - pg_ctlcluster: Only do locales check for <= 8.3 for now.
    - "ident sameuser" does not exist any more in 8.4, just use "ident" from
      8.4 on.
    - pg_createcluster: Do not set root.crt for 8.4 clusters, since it gets
      confused about the dummy one.
    - pg_upgradecluster: Migrate obsolete/changed configuration parameters.
    - t/020_create_sql_remove.t: Fix parsing of psql -Atl output for new 8.4
      format.
    - t/030_errors.t: 8.4 now fails on invalid pg_hba.conf, update
      accordingly.
    - t/050_encodings.t: Stop using pg_controldata for checking cluster
      encoding. Just check psql -Atl.
  * pg_upgradecluster: Don't call createdb/dropdb with -q; it got dropped in
    8.4 and is not necessary any more with 8.3 either.
  * t/010_defaultport_cluster.t: Ensure that we run the test with
    LC_MESSAGES=C, so that it succeeds in non-English locales, too.

 -- Martin Pitt <mpitt@debian.org>  Tue, 24 Mar 2009 17:26:08 +0100

postgresql-common (97) unstable; urgency=low

  * t/030_errors.t: Fix "no space left on device" test for non-English
    locales.
  * Add cleanpg: Script to remove all PostgreSQL related processes and files.
    This isn't shipped in the package, just kept in the source as a developer
    tool.
  * debian/control: Update section to "database".
  * debian/control: Bump Standards-Version to 3.8.1 (no changes required).
  * t/TestLib.pm, deb_installed(): Properly close the dpkg file descriptor.
    Thanks to Cyril Bouthors for pointing this out!
  * t/001_packages.t: Check that postgres user is in the ssl-cert group.